--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -68,6 +68,7 @@ nav a {
     text-align: center;
     text-decoration: none;
     padding: 35px;
+    border-radius: 5px;
 
 }
 
@@ -75,7 +76,7 @@ nav a:hover{
     color: var(--paragraph-color-on-color);
     font-family: var(--paragraph-font);
     text-align: center;
-    text-decoration: none;
+
 }
 #hero-img{
     width: 100%;
@@ -162,6 +163,8 @@ footer{
 footer a{
     color: var(--nav-hover-link-color);
     text-decoration: none;
+    border-radius: 5px;
+
 }
 footer a:hover{
     color: var(--accent2-color);
