--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -64,7 +64,7 @@ header{
 }
 
 nav a {
-    color: var(--paragraph-color-on-color);
+    color: var(--accent2-color);
     text-align: center;
     text-decoration: none;
     padding: 35px;
@@ -73,7 +73,7 @@ nav a {
 }
 
 nav a:hover{
-    color: var(--paragraph-color-on-color);
+    color: var(--accent1-color);
     font-family: var(--paragraph-font);
     text-align: center;
 
@@ -85,22 +85,22 @@ nav a:hover{
     text-align: center;
 }
 .home-title{
-    color:var(--nav-hover-link-color) ;
+    color:var(--accent1-color) ;
     font-family: var(--heading-font);
     font-weight: 700;
     font-size: 2em;
     margin-top: 10px;
 }
 h4{
-    color: var(--nav-hover-link-color);
+    color: var(--accent1-color);
 }
 
 .button-box {
     text-align: center;
 }
 .book, .join{
-    color:var(--paragraph-color-on-color) ;
-    background-color: var(--nav-link-color);
+    color:var(--primary-color) ;
+    background-color: var(--secondary-color);
     text-decoration: none;
     font-size: 18px;
     padding: 15px 30px;
@@ -109,8 +109,8 @@ h4{
 }
 
 .book:hover, .join:hover{
-    color: var(--paragraph-color-on-color);
-    background-color:var(--nav-background-color) ;
+    color: var(--primary-color);
+    background-color:var(--secondary-color) ;
     font-family: var(--paragraph-font);
 }
 main section {
@@ -130,7 +130,7 @@ main section img{
 }
 
 #background{
-    background-color: var(--nav-link-color);
+    background-color: var(--secondary-color);
     height: 725px;
 }
 
@@ -144,24 +144,24 @@ main section img{
     padding: 35px;
 }
 .msg h2{
-    color:var(--paragraph-color-on-color);
+    color:var(--primary-color);
     font-family: var(--paragraph-font);
     font-weight: 700;
 }
 .msg p {
-    color: var(--nav-background-color);
+    color: var(--accent2-color);
     font-size: .8em;
     padding-bottom: 15px;
 
 }
 footer{
-    color: var(--paragraph-color-on-white);
-    background-color: var(--primary-color);
+    color: var(--primary-color);
+    background-color: var(--accent4-color);
     padding: 25px 50px;
     margin-top: 200px;
 }
 footer a{
-    color: var(--nav-hover-link-color);
+    color: var(--accent1-color);
     text-decoration: none;
     border-radius: 5px;
 
