--- a/wwr/ICE/ice6.css
+++ b/wwr/ICE/ice6.css
@@ -1,3 +1,26 @@
 .gridcontainer {
     display: grid;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+.two-column-heading {
+    grid-column: 1/3;
+    text-align: center;
+    grid
+}
+
+.first-two-rows{
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+
+h1{
+    text-align: center;
+}
+
+.footer{
+    grid-row: 3;
+    text-align: center;
+    text-decoration-color: red;
 }
