--- a/wwr/styles/personal-style.css
+++ b/wwr/styles/personal-style.css
@@ -1,3 +1,7 @@
+
+/* if you are using any Google fonts change the font names below to your fonts. 
+Any spaces in your font name should be replaced with a +. 
+Fonts are separated by a & */
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond&family=Merriweather:wght@700&display=swap');
 :root {
 
@@ -26,152 +30,140 @@
 }
 
 
-body{
-    background-color:var(--primary-color) ;
-    font-family: var(--paragraph-font);
-    font-size: 20px;
-    margin: 0;
-    padding: 0;
-}
+/*  Look around below...but DON'T CHANGE ANYTHING! */
 
-h2{
-    font-family: var(--heading-font);
-    font-weight: 700;
-    margin: 0;
+body {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 4em;
+  font-size: 18px;
+  text-align: center;
 }
-
-#content{
-    max-width: 1600px;
-    margin: 0 auto;
+img {
+  display: block;
+  margin: 0 auto;
+  max-width: 300px;
 }
-header{
-    background-color:var(--accent2-color) ;
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--heading-font);
+  color: var(--headline-color-on-white);
+  font-weight: 700;
 }
-
-#Logo_link {
-    padding-top: 5px;
+h2 {
+  text-align: center;
 }
-
-.logo, .icon{
-    width: 80px;
+hr {
+  height: 3px;
+  margin: 35px 0;
+  background: var(--accent1-color);
 }
-
-.logo {
-    border-radius: 50%;
+header {
+  padding: 1em;
+  text-align: center;
+  color: var(--headline-color-on-color);
+  background-color: var(--paragraph-background-color);
 }
-
-.icon{
-    padding: 10px;
+header > h1, header > h2 {
+  color: var(--headline-color-on-color);
 }
-
+p {
+  font-family: var(--paragraph-font);
+  color: var(--paragraph-color-on-white);
+  padding: 1em;
+}
+.colors {
+  width: 100%;
+  min-width: 350px;
+  margin: 30px auto;
+  text-align: center;
+}
+.colors th {
+  background-color: #999;
+}
+.colors td{
+  width: 25%;
+  height: 3em;
+}
+.primary {
+  background-color: var(--primary-color);
+  color: var(--accent4-color)
+}
+.secondary {
+  background-color: var(--secondary-color);
+}
+.accent1 {
+  background-color: var(--accent1-color);
+}
+.accent2{
+  background-color: var(--accent2-color);
+}
+p.colored {
+  background-color: var(--paragraph-background-color);
+  color: var(--paragraph-color-on-color);
+}
+nav {
+  background-color: var(--nav-background-color);
+  line-height: 3em;
+  text-align: center;
+  font-size: 1.2em;
+}
+nav  {
+  list-style-type: none;
+  display: flex;
+}
 nav a {
-    color: var(--accent3-color);
-    text-align: center;
-    text-decoration: none;
-    padding: 35px;
-    border-radius: 5px;
+  padding:1em;
+  min-width: 120px;
+  text-decoration: none;
+  padding: 10px;
+}
+nav a:link, nav a:visited {
+  color: var(--nav-link-color);
+}
+nav a:hover {
+  color: var(--nav-hover-link-color);
+  background-color: var(--nav-hover-background-color);
+}
+.sitemap {
+  display: grid;
+  justify-content: center;
 
+  grid-template-columns: repeat(6, 15%);
+  grid-template-rows: 3em 1.5em 1.5em 3em;
+  grid-template-areas: ". . home home . ."
+    ". . . top . ."
+    ". left left right right ."
+    "page2 page2 . . page3 page3";
 }
-
-nav a:hover{
-    color: var(--accent3-color);
-    font-family: var(--paragraph-font);
-    text-align: center;
-
+.sitemap > div {
+  text-align: center;
 }
-#hero-img{
-    width: 100%;
+.sm-home {
+  grid-area: home;
+  background-color: #ccc;
+  line-height: 3em;
 }
-#hero-msg h1, #hero-msg h4 {
-    text-align: center;
+.sm-page2 {
+  grid-area: page2;
+  background-color: #ccc;
+  line-height: 3em;
 }
-.home-title{
-    color:var(--accent4-color) ;
-    font-family: var(--heading-font);
-    font-weight: 700;
-    font-size: 2em;
-    margin-top: 10px;
+.sm-page3 {
+  grid-area: page3;
+  background-color: #ccc;
+  line-height: 3em;
 }
-h4{
-    color: var(--accent4-color);
+.top {
+  grid-area: top;
+  border-left: 1px solid;
 }
-
-.button-box {
-    text-align: center;
+.left {
+  grid-area: left;
+  border-top: 1px solid;
+  border-left: 1px solid;
 }
-.book, .join{
-    color:var(--paragraph-color-on-color) ;
-    background-color: var(--nav-link-color);
-    text-decoration: none;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-
-.book:hover, .join:hover{
-    color: var(--paragraph-color-on-color);
-    background-color:var(--nav-background-color) ;
-    font-family: var(--paragraph-font);
-}
-main section {
-    text-align: center;
-}
-
-main section img{
-    box-sizing: border-box;
-}
-
-.rivers-card, .camping-card, .rapids-card{
-    margin: 200px 0;
-}
-
-.card-img{
-    border: 10px solid var(--secondary-color);
-}
-
-#background{
-    background-color: var(--nav-link-color);
-    height: 725px;
-}
-
-.mountains {
-    margin: 100px 0;
-}
-
-.msg{
-    background-color:var(--accent2-color) ;
-    line-height: 1.5em;
-    padding: 35px;
-}
-.msg h2{
-    color:var(--paragraph-color-on-color);
-    font-family: var(--paragraph-font);
-    font-weight: 700;
-}
-.msg p {
-    color: var(--nav-background-color);
-    font-size: .8em;
-    padding-bottom: 15px;
-
-}
-footer{
-    color: var(--paragraph-color-on-white);
-    background-color: var(--primary-color);
-    padding: 25px 50px;
-    margin-top: 200px;
-}
-footer a{
-    color: var(--nav-hover-link-color);
-    text-decoration: none;
-    border-radius: 5px;
-
-}
-footer a:hover{
-    color: var(--accent2-color);
-    font-family: var(--paragraph-font);
-}
-
-footer .social img{
-    padding-top: 15px;
+.right {
+  grid-area: right;
+  border-top: 1px solid;
+  border-right: 1px solid;
 }
